fix: removing noise of envirenment

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,4 +5,4 @@ framework = arduino
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
-; lib_deps =  ArduinoJson@6.17.0 
+lib_deps =  Filters
